--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                      <input class="submit formEntry" type="submit" name="Enviar" value="Enviar"><br><br>
                       
         </form>
-    <script src="cadastro simples.js"></script>
+    <script src="Dado de Pessoal.js"></script>
         
 </body>
 </html>
