--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="form" method="GET">
         <form method="post" action="index.php"><br>
-            <h1>Dado de Pessoal</h1><br>
+            <h1>Dados Pessoais</h1><br>
 
     <div class="Dado de Pessoal">
         <h2>Cadastro</h2>
@@ -87,9 +87,9 @@
         <h2>Contato</h2>
                 <div class="c">
                     <label for="Telefone">Telefone:</label>
-                    <input type="text" class= "formEntry"size="15" placeholder="">
+                    <input type="text" class= "formEntry"size="10" placeholder="">
                     <label for="Celular"> Celular:</label>
-                    <input type="text" class= "formEntry"size="15" placeholder=""required>
+                    <input type="text" class= "formEntry"size="10" placeholder=""required>
                     <label for="email"> Email:</label>
                     <input type="text" class= "formEntry"size="30" placeholder=""><br><br><br>
                     
